--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 reqwest = { version = "0.11.12", features = ["json"] }
-serde = { version = "1.0.147", features=["derive"] }
+serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 chrono = "0.4.22"
+clap = { version = "4.0.18", features = ["derive"] }
